# printforhelp

./: .gitignore  .markdownlint.json  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  LICENSE  README.md  center-description-artistadecalle.md  docker-compose.yml  flow.md  mkdocs.yml  whatsapp-print-standards-en.txt  whatsapp-print-standards-es.txt
backend/: .coverage  AGENTS.md  CLAUDE.md  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_users_audit_log.py  0002_orgs_collection_centers.py  0003_user_email_full_name.py  0004_shipments_activity.py  0005_cc_location_url.py  0006_parts_requests_contributions.py  0007_cc_notes_to_description.py  0008_contribution_optional_center.py  0009_request_image_url.py  0010_resources_generic.py  0011_contribution_prepared.py  0012_cc_state.py  0013_cc_tags.py  0014_contribution_tags.py  0015_notices.py  0016_notice_severity_success.py  0017_notifications.py  0018_item_tracking.py  0019_labels_and_contributor_message.py  0020_contributor_message_templates.py  0021_request_item_number.py  0022_user_flags.py  0023_resource_units.py  0024_item_pref_centers.py  0025_cc_listed.py  0026_password_reset_tokens.py  0027_user_google_sub.py  0028_username_chosen.py  0029_request_image_focus.py  0030_resource_image_focus.py  0031_org_handle.py  0032_request_beneficiary.py  0033_request_packaging_instructions.py  0034_resource_labels_per_page.py  0035_request_moderation.py  0036_drop_request_review_note.py  0037_resource_packaging_instructions.py  0038_notification_email_prefs.py  0039_reactions.py  0040_comment_parent.py  (+4 more)
backend/app/: bootstrap.py  config.py  database.py  dependencies.py  exceptions.py  handles.py  main.py  models.py  permissions.py  ratelimit.py  storage.py
backend/app/activity/: constants.py  exceptions.py  models.py  router.py  schemas.py  service.py  validators.py
backend/app/audit_log/: constants.py  models.py  service.py
backend/app/auth/: constants.py  dependencies.py  email.py  exceptions.py  google.py  models.py  router.py  schemas.py  service.py  utils.py
backend/app/collection_centers/: __init__.py  constants.py  exceptions.py  models.py  router.py  schemas.py  service.py
backend/app/contributions/: __init__.py  constants.py  exceptions.py  models.py  router.py  schemas.py  service.py
backend/app/notices/: __init__.py  constants.py  exceptions.py  models.py  router.py  schemas.py  service.py
backend/app/notifications/: constants.py  email.py  exceptions.py  models.py  router.py  schemas.py  service.py  unsubscribe.py
backend/app/organizations/: __init__.py  constants.py  exceptions.py  models.py  router.py  schemas.py  service.py
backend/app/parts/: __init__.py  constants.py  exceptions.py  models.py  router.py  schemas.py  service.py
backend/app/reactions/: __init__.py  constants.py  exceptions.py  models.py  router.py  schemas.py  service.py
backend/app/requests/: __init__.py  constants.py  exceptions.py  models.py  router.py  schemas.py  service.py
backend/app/resources/: __init__.py  constants.py  exceptions.py  models.py  router.py  schemas.py  service.py
backend/app/scheduled/: __init__.py  expire_claims.py  runner.py  send_notification_emails.py
backend/app/shipments/: constants.py  exceptions.py  models.py  router.py  schemas.py  service.py
backend/app/tracking/: __init__.py  constants.py  exceptions.py  models.py  qr.py  router.py  schemas.py  service.py
backend/app/uploads/: constants.py  exceptions.py  router.py  schemas.py  service.py
backend/app/users/: constants.py  exceptions.py  flags.py  models.py  router.py  schemas.py  service.py
backend/tests/: conftest.py  test_bootstrap.py  test_handles.py  test_smoke.py
backend/tests/activity/: test_activity.py
backend/tests/auth/: test_auth.py  test_email.py  test_google.py  test_password_reset.py  test_rate_limit.py
backend/tests/collection_centers/: test_collection_centers.py
backend/tests/contributions/: test_contributions.py
backend/tests/notices/: test_notices.py
backend/tests/notifications/: test_email_notifications.py  test_notifications.py
docs/: index.md  (+2 more)
(+249 files in other folders)
