[project]
name = "printforhelp-backend"
version = "0.1.0"
description = "PrintForHelp Backend API"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.14.0",
    "fastapi[standard]>=0.124.0",
    "psycopg2-binary>=2.9.11",
    "pwdlib[argon2]>=0.3.0",
    "pillow>=11.0.0",
    "pillow-heif>=0.18.0",
    "pydantic-settings>=2.12.0",
    "pyjwt[crypto]>=2.10.1",
    "python-multipart>=0.0.20",
    "qrcode>=8.0",
    "pyyaml>=6.0",
    "sqlalchemy>=2.0.44",
    "slowapi>=0.1.10",
]

[dependency-groups]
dev = [
    "httpx>=0.28.0",
    "pyright>=1.1.407",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.25.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.12.12",
    "sqlalchemy[mypy]>=2.0.44",
]

[tool.ruff]
line-length = 88
target-version = "py313"

exclude = [
    ".git",
    ".venv",
    "__pycache__",
    "build",
    "dist",
    "*.egg-info",
    ".mypy_cache",
    ".pytest_cache",
    ".ruff_cache",
    "migrations",
    "alembic",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
skip-magic-trailing-comma = false

[tool.ruff.lint]
select = [
    "E", "W", "F", "I", "B", "UP", "C90", "N", "D", "S", "A", "ANN",
    "COM", "C4", "DTZ", "PIE", "T20", "PYI", "PT", "Q", "RSE", "RET",
    "SLF", "SIM", "ARG", "PTH", "PL", "RUF",
]

ignore = [
    "D100", "D104", "D107", "D203", "D213",
    "S101", "S105",
    "PLR0913",
    "COM812", "ISC001",
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["ANN", "D", "S101", "ARG", "PLR2004", "SLF"]
"*/routes/*.py" = ["PLR0913"]
"scripts/*.py" = ["T201", "PLR0912"]
# The resources/requests/contributions/collection-centers service layers
# orchestrate each other (e.g. requests <-> contributions are mutually
# dependent), so they use function-local imports to break import cycles.
# The notices service loads any of those entities by target type and uses
# the same function-local-import convention. The activity service fans
# events out to the notifications service via the same pattern. The tracking
# service loads Contributions/Requests/Resources the same way.
"app/resources/service.py" = ["PLC0415"]
"app/requests/service.py" = ["PLC0415"]
"app/contributions/service.py" = ["PLC0415"]
"app/collection_centers/service.py" = ["PLC0415"]
"app/notices/service.py" = ["PLC0415"]
"app/activity/service.py" = ["PLC0415"]
"app/tracking/service.py" = ["PLC0415"]
# slowapi needs a `request: Request` param in the signature of every
# rate-limited endpoint even though the body never references it.
"app/auth/router.py" = ["ARG001"]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.isort]
known-first-party = ["printforhelp", "app"]
split-on-trailing-comma = true
combine-as-imports = true

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.pylint]
max-args = 5
max-branches = 12
max-returns = 6
max-statements = 50

[tool.ruff.lint.flake8-pytest-style]
fixture-parentheses = false
mark-parentheses = false

[tool.ruff.lint.flake8-quotes]
inline-quotes = "double"
multiline-quotes = "double"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["app"]
branch = true
omit = [
    # Startup glue that runs in the app lifespan, not under pytest. The
    # dev-seed + anonymous-user logic IS tested (tests/test_bootstrap.py);
    # the admin bootstrap / lifespan wiring runs only against a live deploy.
    "app/bootstrap.py",
    "app/main.py",
]

[tool.coverage.report]
show_missing = true
# CI fails the build if coverage drops below this. Current is ~96%; the
# 95% floor leaves room for hard-to-reach error branches while still
# catching a whole endpoint shipped without tests.
fail_under = 95
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    # Stub bodies on Protocol methods (never executed).
    "^\\s*\\.\\.\\.\\s*$",
]

[tool.pyright]
include = ["app", "tests"]
exclude = ["**/__pycache__", "alembic", ".venv"]
pythonVersion = "3.13"
typeCheckingMode = "standard"
